--- a/build.gradle
+++ b/build.gradle
@@ -71,16 +71,26 @@ dependencies {
 
     // compile 'org.droidmate:droidmate-2:+'
     // implementation "com.github.uds-se.droidmate:droidmate-2:2.0.0"
-    
+
+    // https://mvnrepository.com/artifact/ca.mcgill.sable/soot
+    implementation group: 'ca.mcgill.sable', name: 'soot', version: '3.3.0'
+
+    // https://mvnrepository.com/artifact/de.tud.sse/soot-infoflow
+    implementation group: 'de.tud.sse', name: 'soot-infoflow-android', version: '2.7.1'
+
+
     implementation("com.github.hotzkow:explorationModel")
     implementation("com.github.uds-se.droidmate:droidmate-2:master-SNAPSHOT")
     
     implementation "com.github.uds-se:droidmate-coverage:1.4.1-SNAPSHOT"
-    implementation "ca.mcgill.sable:soot:3.3.0-SNAPSHOT"
-    implementation ("de.tud.sse:soot-infoflow-android:2.7.2-SNAPSHOT") {
+
+    compile "de.tud.sse:soot-infoflow-android:2.7.1-SNAPSHOT"
+    compile "ca.mcgill.sable:soot:3.3.0-SNAPSHOT"
+//    implementation "ca.mcgill.sable:soot:3.3.0-SNAPSHOT"
+//    implementation ("de.tud.sse:soot-infoflow-android:2.7.2-SNAPSHOT") {        // TODO: delete
         // FlowDroid uses an older version of Soot, let's use the newest one!
-        exclude group: 'ca.mcgill.sable', module: 'soot'
-    }
+//        exclude group: 'ca.mcgill.sable', module: 'soot'
+//    }
 
     implementation 'org.json:json:20160212'
 
