--- a/build.gradle
+++ b/build.gradle
@@ -87,7 +87,7 @@ dependencies {
     compile "de.tud.sse:soot-infoflow-android:2.7.1-SNAPSHOT"
     compile "ca.mcgill.sable:soot:3.3.0-SNAPSHOT"
 //    implementation "ca.mcgill.sable:soot:3.3.0-SNAPSHOT"
-//    implementation ("de.tud.sse:soot-infoflow-android:2.7.2-SNAPSHOT") {        // TODO: delete
+//    implementation ("de.tud.sse:soot-infoflow-android:2.7.2-SNAPSHOT") {
         // FlowDroid uses an older version of Soot, let's use the newest one!
 //        exclude group: 'ca.mcgill.sable', module: 'soot'
 //    }
